style: Fix the style for the BootStrap v5.1 in the dark mode

--- a/app/packs/stylesheets/scaffolds.scss
+++ b/app/packs/stylesheets/scaffolds.scss
@@ -31,7 +31,7 @@ body {
       color: whitesmoke;
     }
 
-    span, table {
+    span:not([class^='flatpickr-']), table {
       color: whitesmoke;
     }
 
